kubernetes/home-assistant/42-esphome.deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: esphome
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 0 4 * * 5" # 4am Fri
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: esphome
          image: esphome/esphome:${IMGTAG_HOME__ASSISTANT_DEPLOY_ESPHOME}
          ports:
            - name: http
              protocol: TCP
              containerPort: 6052
          volumeMounts:
            - name: config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: config
          hostPath:
            path: ${VOLUMES_PATH}/esphome
            type: DirectoryOrCreate
