kubernetes/home-assistant/52-ha.deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 0 4 * * 5" # 4am Fri
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
      annotations:
        # FIXME: Adding to allow Bluetooth to work inside of the container
        # I should find a better way than this
        container.apparmor.security.beta.kubernetes.io/home-assistant: unconfined
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:${IMGTAG_HOME__ASSISTANT_DEPLOY}
          ports:
            - name: admin
              protocol: TCP
              containerPort: 8123
          volumeMounts:
            - name: dbus
              mountPath: /run/dbus
            - name: config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: admin
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: admin
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: dbus
          hostPath:
            path: /var/run/dbus
            type: Directory
        - name: config
          hostPath:
            path: ${VOLUMES_PATH}/home-assistant
            type: DirectoryOrCreate
