kubernetes/home-assistant/mosquitto.deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: mosquitto
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "0 0 4 * * 5" # 4am Fri
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0.18
          ports:
            - name: mqtt
              containerPort: 1883
              protocol: TCP
          volumeMounts:
            - name: mosquitto-data
              mountPath: /mosquitto/data
            - name: mosquitto-config
              mountPath: /mosquitto/config
          livenessProbe:
            tcpSocket:
              port: mqtt
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: mqtt
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: mosquitto-config
          hostPath:
            path: ${VOLUMES_PATH}/mosquitto/config
            type: DirectoryOrCreate
        - name: mosquitto-data
          hostPath:
            path: ${VOLUMES_PATH}/mosquitto/data
            type: DirectoryOrCreate
