kubernetes/home-assistant/zigbee2mqtt.statefulset.yml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:1.33.2
          securityContext:
            privileged: true
          ports:
            - name: admin
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: zigbee
              mountPath: /dev/ttyACM0
              readOnly: false
            - name: udev
              mountPath: /run/udev
              readOnly: true
            - name: zigbee2mqtt-data
              mountPath: /app/data
              readOnly: false
          livenessProbe:
            httpGet:
              path: /
              port: admin
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: admin
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
      volumes:
        - name: zigbee
          hostPath:
            path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20221201153336-if00
        - name: udev
          hostPath:
            path: /run/udev
            type: Directory
        - name: zigbee2mqtt-data
          hostPath:
            path: ${VOLUMES_PATH}/zigbee2mqtt
            type: DirectoryOrCreate
