kubernetes/home-assistant/50-ha.service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant 
spec:
  selector:
    app.kubernetes.io/name: home-assistant 
  ports:
    - name: admin
      protocol: TCP
      port: 8123
      targetPort: admin
