kubernetes/home-assistant/mosquitto.service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: mqtt
