kubernetes/home-assistant/nodered.service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: node-red 
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: node-red
spec:
  selector:
    app.kubernetes.io/name: node-red
  ports:
    - name: admin
      protocol: TCP
      port: 1880
      targetPort: admin
