kubernetes/home-assistant/zigbee2mqtt.service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: zigbee2mqtt
spec:
  selector:
    app.kubernetes.io/name: zigbee2mqtt
  ports:
    - name: admin 
      protocol: TCP
      port: 8080
      targetPort: admin
