kubernetes/home-assistant/21-zigbee2mqtt.ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: zigbee2mqtt
spec:
  rules:
    - host: zigbee.${DOMAIN_ROOT}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: admin
