kubernetes/home-assistant/41-esphome.ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: esphome
spec:
  rules:
    - host: esphome.${DOMAIN_ROOT}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esphome
                port:
                  name: http
