kubernetes/home-assistant/nodered.ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: node-red
spec:
  rules:
    - host: nodered.${DOMAIN_ROOT}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-red
                port:
                  name: admin
